# physics_engine

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
cmake/: build_lib.cmake  build_test.cmake  library.cmake  python.cmake  test.cmake
docs/: resolve_collision.plantuml  resolve_motion.plantuml  sequence.plantuml  spawn_particle.plantuml  usecases.plantuml
include/: physics_backend.hpp  physics_engine.hpp
include/physics_backend/: euler.hpp  physics.hpp  physics_backend.hpp  simulation.hpp  units.hpp
include/physics_backend/detail/: mixins.hpp
include/physics_backend/domain/: constants.hpp  edge.hpp  geometry.hpp  motion.hpp  polygon.hpp  vector.hpp
include/physics_backend/euler/: CMakeLists.txt  si.hpp
include/physics_backend/units/: units.hpp  vector.hpp
include/physics_backend/usecases/: collision.hpp  constrain.hpp  edge.hpp  motion.hpp  objects.hpp  particle.hpp  polygon.hpp  step.hpp
include/physics_engine/: simulation.hpp  units.hpp
include/physics_engine/detail/: fmaps.hpp
include/physics_engine/domain/: geometry.hpp  motion.hpp  vector.hpp
include/physics_engine/usecases/: collision.hpp  constrain.hpp  edge.hpp  motion.hpp  particle.hpp  polygon.hpp  step.hpp
libs/: CMakeLists.txt
python/: CMakeLists.txt  bindings.cpp
src/adapters/euler/: si_p.hpp
src/core/: concepts.hpp
src/domain/: CMakeLists.txt  angle.cpp  angle.hpp  components.hpp  concepts.hpp  constants.hpp  coordinates.hpp  degrees.cpp  degrees.hpp  euler.hpp  example.cpp  magnitude.cpp  magnitude.hpp  math.hpp  motion.hpp  vector.cpp  vector.hpp
src/domain/core/: angle.cpp  angle.hpp  constants.hpp  coordinates.hpp  units.hpp  vector.cpp  vector.hpp
src/domain/motion/: CMakeLists.txt  (+2 more)
src/example/: CMakeLists.txt  example.cpp  example_p.hpp
src/usecases/: CMakeLists.txt  step.hpp
test/: CMakeLists.txt
test/common/: precision.hpp
test/domain/: CMakeLists.txt  test_angle.cpp  test_degrees.cpp  test_euler.cpp  test_example.cpp  test_magnitude.cpp  test_motion.cpp  test_vector.cpp
test/domain/core/: CMakeLists.txt  test_angle.cpp  test_vector.cpp
test/private/domain/: test_motion.cpp  test_vector.cpp
test/private/usecases/: test_step.cpp
test/private/usecases/euler/: test_resolve.cpp
test/public/euler/: CMakeLists.txt  test_si.cpp
test/strategy/euler/: CMakeLists.txt  test_euler.cpp  test_motion.cpp  test_step.cpp
test/units/: CMakeLists.txt  test_vector.cpp
test/usecases/: CMakeLists.txt  test_collision.cpp  test_constrain.cpp  test_polygon.cpp  test_simulation.cpp  test_step.cpp
test/usecases/detail/: CMakeLists.txt  test_ray_casting.cpp
test/usecases/euler/: CMakeLists.txt  test_euler.cpp  test_resolve.cpp
(+13 files in other folders)
